Revise 'About' section and clean up script comments
Updated the content in the 'About' section and modified the description of UI/UX work. Removed commented documentation from the script section.

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ a { color:var(--accent); text-decoration:none }
     <!-- New content to fill bottom of left column -->
     <div class="about" aria-label="About">
       <strong style="display:block;margin-bottom:6px;color:var(--text)">About</strong>
-      <p>I'm a game- and frontend-focused developer specializing in client-side systems, UX, and performant UI. I deliver clear, maintainable code and polished player-facing experiences.</p>
+      <p>Hello welcome to my Portfolio! Im O65 you 99% never heard of me but i exist yea thats cool ig.</p>
     </div>
 
     <div class="metrics" aria-hidden="false">
@@ -316,7 +316,7 @@ a { color:var(--accent); text-decoration:none }
 
     <div class="project">
       <h3>UI / UX Work · <small style="color:var(--muted);">Design & Prototyping</small></h3>
-      <p class="muted">Designing responsive, accessible interfaces with a focus on clarity and performance.</p>
+      <p class="muted">Designing good looking and responsive UI.</p>
     </div>
 
     <div class="section-title" style="margin-top:20px"><h2 style="margin:0">Activity</h2><div class="underline"></div></div>
@@ -335,14 +335,6 @@ a { color:var(--accent); text-decoration:none }
 <div id="toast" class="toast" role="status" aria-live="polite" style="transform:translateX(-50%) translateY(8px);"></div>
 
 <script>
-/*
-  Humanized / documented script
-  - clearer variable names
-  - small helper functions
-  - separated logic: clock, blob, drag/drop, starfield
-  - gentle smoothing for glow fade in/out so it looks natural
-*/
-
 /* ---------- Utilities ---------- */
 const $ = (id) => document.getElementById(id);
 const clamp = (v, a, b) => Math.max(a, Math.min(b, v));
