Update portfolio introduction text for clarity

--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ a { color:var(--accent); text-decoration:none }
     <!-- New content to fill bottom of left column -->
     <div class="about" aria-label="About">
       <strong style="display:block;margin-bottom:6px;color:var(--text)">About</strong>
-      <p>Hello welcome to my Portfolio! Im O65 you 99% never heard of me but i exist yea thats cool ig.</p>
+      <p>Hello welcome to my Portfolio! Im O65 you probably NEVER heard of me but i exist yea thats cool ig.</p>
     </div>
 
     <div class="metrics" aria-hidden="false">
