--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <main class="wrap" role="main">
   <section class="card left" aria-labelledby="profile-heading">
     <div class="profile-head">
-      <div class="pfp" aria-hidden="false"><img id="pfpImg" src="profile_picture.jpg" alt="Profile photo of O65"></div>
+      <div class="pfp" aria-hidden="false"><img id="pfpImg" src="profile_picture.png" alt="Profile photo of O65"></div>
       <div style="flex:1">
         <h1 id="profile-heading">O65 <span class="user">@robinaron</span></h1>
         <div class="role">Scripting · Game Dev · Frontend & UI Design</div>
