--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
       <div style="flex:1">
         <h1 id="profile-heading">O65 <span class="user">@robinaron</span></h1>
         <div class="role">Scripting · Game Dev · Frontend & UI Design</div>
-        <div class="status" aria-hidden="false"><div class="status-dot" aria-hidden="true"></div><div style="font-size:13px;color:#4ef08a;font-weight:600">Open to Work</div></div>
-        
+        <div class="status" aria-hidden="false"><div class="status-dot" aria-hidden="true"></div><div style="font-size:13px;color:#4eddf0;font-weight:600">Open to Work</div></div>        
       </div>
     </div>
 
